# safetar

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs
src/archive/: header.rs  mod.rs  pax.rs
src/cli/: mod.rs
src/io/: dec.rs  enc.rs  mod.rs
src/manifest/: mod.rs
src/policy/: mod.rs
tests/: archive_features.rs  cli_smoke.rs  manifest_test.rs  policy_e2e.rs
